[gd_scene load_steps=6 format=3 uid="uid://hudscene8y"]

[ext_resource type="Script" path="res://src/ui/Hud.gd" id="1_hudgd"]

[sub_resource type="StyleBoxFlat" id="1_style_status"]
bg_color = Color(0.188, 0.188, 0.282, 0.85)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_left = 12
corner_radius_bottom_right = 12
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="2_style_instructions"]
bg_color = Color(0.145, 0.141, 0.219, 0.85)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_left = 12
corner_radius_bottom_right = 12
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hudgd")

[node name="Root" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopLeft" type="Control" parent="Root"]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 36.0

[node name="StatusPanel" type="PanelContainer" parent="Root/TopLeft"]
custom_minimum_size = Vector2(280, 120)
theme_override_styles/panel = SubResource("1_style_status")

[node name="Margin" type="MarginContainer" parent="Root/TopLeft/StatusPanel"]

[node name="VBox" type="VBoxContainer" parent="Root/TopLeft/StatusPanel/Margin"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="Root/TopLeft/StatusPanel/Margin/VBox"]
text = "Hearts: [+][+][+]\nTimer: 03:00\nAltitude: 0m"
vertical_alignment = 1

[node name="AbilityLabel" type="Label" parent="Root/TopLeft/StatusPanel/Margin/VBox"]
text = "Abilities: Dash ready | Time Slow ready"

[node name="BottomLeft" type="Control" parent="Root"]
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 40.0
margin_bottom = -40.0
margin_top = -240.0

[node name="InstructionsPanel" type="PanelContainer" parent="Root/BottomLeft"]
custom_minimum_size = Vector2(320, 180)
theme_override_styles/panel = SubResource("2_style_instructions")

[node name="Margin" type="MarginContainer" parent="Root/BottomLeft/InstructionsPanel"]

[node name="InstructionsLabel" type="Label" parent="Root/BottomLeft/InstructionsPanel/Margin"]
text = "Controls appear here."
autowrap_mode = 2

[node name="Center" type="Control" parent="Root"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MessageLabel" type="Label" parent="Root/Center"]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
offset_left = -240.0
offset_right = 240.0
offset_top = 0.0
offset_bottom = 80.0
horizontal_alignment = 1
visible = false
text = "Ready!"
theme_override_colors/font_color = Color(0.949, 0.922, 0.961, 1)
theme_override_font_sizes/font_size = 24
